--- a/basics.html
+++ b/basics.html
@@ -23,5 +23,29 @@
         <p><strong>HTML</strong> describes the structure of a web page</p>
         <em>Some emphasized text</em>
         <!--This is a comment-->
+        <p>
+            <strong>An Unordered shopping list</strong>
+        </p>
+        <ul>
+            <li>Bakery and bread</li>
+            <li>Meat and seafood</li>
+            <li>Pasta and rice</li>
+            <li>Oils</li>
+        </ul>
+
+        <p>
+            <strong>An Ordered todo list</strong>
+            <ol>
+                <li>Go to the bank</li>
+                <li>Go to the mosque</li>
+            </ol>
+        </p>
+        <p>
+            <strong>We can change the type of the list item marker</strong>
+            <ol type="a">
+                <li>Go to the bank</li>
+                <li>Go to the mosque</li>
+            </ol>
+        </p>
     </body>
 </html>
