--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Links and Images</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>The Odin Project</h2>
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about">Click Me</a>
+    <p>
+        <a href="./pages/about.html">About</a>
+    </p>
 </body>
 </html>
