--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -10,7 +10,9 @@
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">Click Me</a>
     <p>
-        <a href="about.html">About</a>
+        <a href="pages/about.html">About</a>
     </p>
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="">
+    <img src="images/drift.jpg" alt="">
 </body>
 </html>
