add css basic syntax

--- a/css/index.html
+++ b/css/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styling</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <h1>This is a webpage</h1>
+    <div>Hello, World!</div>
+    <div>Hello again!</div>
+    <p>Hi...</p>
+    <div>Okay, bye.</div>
     
+    <div class="alert-text">
+        Please agree to our terms of service
+    </div>
+
+    <div class = "subsection header">
+        <p class = "subsection preview">
+            This is a subsection
+        </p>
+    </div>
+
+    <!-- Descendant Combinator-->
+    <div class="parent">
+        <p>First child</p>
+        <p>Second child</p>
+        <span>
+          <a href="#">Link</a>
+        </span>
+      </div>
+      
 </body>
 </html>
