Add image folder

--- a/css/index.html
+++ b/css/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>This is a webpage</h1>
+    <h1 class="webpage header">
+        This is a webpage
+    </h1>
     <div>Hello, World!</div>
     <div>Hello again!</div>
     <p>Hi...</p>
